--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="thou/revolution:"
+        android:text="units/revolution:"
         android:id="@+id/textViewRevLabel"
         android:textColor="@color/textWhite"/>
 
